--- a/cs146/forms/forms.html
+++ b/cs146/forms/forms.html
@@ -4,88 +4,94 @@
   <title>Practice with Forms</title>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="forms.css">
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
   <script type="text/javascript">
   </script>
 </head>
-<body>
-  <!--Useful to have name and id match. Name is for data, id is for styling-->
-  <!--GET puts stuff in the url, POST doesnt-->
-  <form name="form1" id="form1" autocomplete="off" mathod="GET" onsubmit="return false;">
-    <fieldset>
-      <legend>User Info</legend>
-      <label for="firstname" class="labelitem">First name:</label>
-      <input type="text" name="firstname" id="firstname" size="24" maxlength="32" placeholder="Enter first name." required pattern="[a-zA-Z][a-zA-Z'/- ]*" title="First name cannot be blank." /><br />
-      <label for="lastname" class="labelitem">Last name:</label>
-      <input type="text" name="lastname" id="lastname" size="24" maxlength="32" placeholder="Enter last name." required pattern="[a-zA-Z][a-zA-Z'/- ]*" title="Last name cannot be blank." /><br />
-      <div class="labelitem"><label for="address1">Address: </label></div>
-      <div class="inputitem">
-        <input type="text" name="address1" size="24" maxlength="32" placeholder="Enter street address" required pattern=".+" title="Address cannot be blank." /><br />
-        <input type="text" name="address2" id="address2" size="24" maxlength="32" /><br />
-      </div><br />
-      <label for="city" class="labelitem">City:</label>
-      <input type="text" name="city" id="city" size="24" maxlength="32" placeholder="Enter city." required /><br />
-      <label for="state" class="labelitem">State:</label>
-      <select name="state" id="state" required>
-        <option value="" selected>&nbsp;</option>
-        <optgroup label="Mid-Atlantic">
-          <option value="Delaware">Delaware</option>
-          <option value="New Jersey">New Jersey</option>
-        </optgroup>
-        <optgroup label="New England">
-          <option value="Massachusetts">Massachusetts</option>
-          <option value="Vermont">Vermont</option>
-        </optgroup>
-      </select><br />
-      <label for="zipcode" class="labelitem">Zip code:</label>
-      <input type="text" name="zipcode" id="zipcode" size="24" max-length="10" placeholder="Enter zipcode." required pattern="\d{5}(\-\d{4})?" title="xxxxx or xxxxx-xxxx" />
-    </fieldset>
-    <fieldset>
-      <legend>Student Info</legend>
-      <label for="sid" class="labelitem">SID:</label>
-      <input type="text" name="sid" id="sid" size="24" maxlength="8" required /><br />
-      <label for="password" class="labelitem">Password:</label>
-      <div class="inputitem">
-        <input type="password" name="password" id="password" pattern=".{8,}" required /><br />
-        <p class="info">Password must be at least 8 characters.</p>
-      </div><br /><br />
-      <div class="labelitem">Year:</div>
-      <div class="inputitem">
-        <input type="radio" name="grade_year" id="freshman" value="freshman" checked />
-        <label for="freshman">Freshman</label><br />
-        <input type="radio" name="grade_year" id="sophomore" value="sophomore" />
-        <label for="sophomore">Sophomore</label><br />
-        <input type="radio" name="grade_year" id="junior" value="junior" />
-        <label for="junior">Junior</label><br />
-        <input type="radio" name="grade_year" id="senior" value="senior" />
-        <label for="senior">Senior</label><br />
-      </div><br /><br />
-      <div class="labelitem">Devices</div>
-      <div class="inputitem">
-        <input type="checkbox" name="devices[]" id="laptop" value="laptop" />
-        <label for="laptop">Laptop</label><br />
-        <input type="checkbox" name="devices[]" id="desktop" value="laptop" />
-        <label for="desktop">Desktop</label><br />
-        <input type="checkbox" name="devices[]" id="tablet" value="tablet" />
-        <label for="tablet">Tablet</label><br />
-      </div><br />
-      <label for="date_enrolled" class="labelitem">Date enrolled:</label>
-      <input type="date" name="daten_enrolled" id="date_enrolled" /><br />
-      <label for="favcolor" class="labelitem">Favorite color:</label>
-      <input type="color" name="favcolor" id="favcolor" /><br />
-      <label for="fun_facts" class="labelitem">Fun facts:</label>
-      <textarea name="fun_facts" id="fun_facts" rows="10" cols="20" placeholder="Enter some fun facts if you feel like it..."></textarea><br />
-    </fieldset>
-    <section id="reset_submit">
-      <input type="reset" value="Reset" onclick="reset_form()" />
-      <input type="submit" value="Submit" />
-    </section><br />
-    <div id="summary_wrapper">
+<body> 
+    <form name="form1" id="form1" autocomplete="off" method="get" onsubmit="return false;">
       <fieldset>
-        <legend>Summary</legend>
-        <section id="summary"></section>
+        <legend>User Info</legend>
+        <label for="firstname" class="labelitem">First name:</label>
+        <input type="text" name="firstname" id="firstname" size="24" maxlength="32" placeholder="Enter first name." required="" pattern="[a-zA-Z][a-zA-Z'\- ]*" title="First name cannot be blank."><br>
+        <label for="lastname" class="labelitem">Last name:</label>
+        <input type="text" name="lastname" id="lastname" size="24" maxlength="32" placeholder="Enter last name." required="" pattern="[a-zA-Z][a-zA-Z'\- ]*" title="Last name cannot be blank."><br>
+        <div class="labelitem"><label for="address1">Address:</label></div>
+        <div class="inputitem">
+          <input type="text" name="address1" id="address1" size="24" maxlength="32" placeholder="Enter street address." required="" pattern=".+" title="Address cannot be blank."><br>
+          <input type="text" name="address2" id="address2" size="24" maxlength="32"><br>
+        </div><br>
+        <label for="city" class="labelitem">City:</label>
+        <input type="text" name="city" id="city" size="24" maxlength="32" placeholder="Enter city." required=""><br>
+        <label for="state" class="labelitem">State:</label>
+        <select name="state" id="state" required="">
+          <option value="" selected="" disabled="">Choose a state</option>
+          <optgroup label="Mid-Atlantic">
+            <option value="Delaware">Delaware</option>
+            <option value="New Jersey">New Jersey</option>
+          </optgroup>
+          <optgroup label="New England">
+            <option value="Massachusetts">Massachusetts</option>
+            <option value="Vermont">Vermont</option>
+          </optgroup>
+        </select><br>
+        <label for="zipcode" class="labelitem">Zip code:</label>
+        <input type="text" name="zipcode" id="zipcode" size="24" maxlength="10" placeholder="Enter zip code." required="" pattern="\d{5}(\-\d{4})?" title="xxxxx or xxxxx-xxxx"><br>
       </fieldset>
-    </div>
-  </form>
+      <fieldset>
+        <legend>Student Info</legend>
+        <label for="sid" class="labelitem">SID:</label>
+        <input type="text" name="sid" id="sid" size="24" maxlength="8" required=""><br>
+        <label for="password" class="labelitem">Password:</label>
+        <div class="inputitem">
+          <input type="password" name="password" id="password" pattern=".{8,}" required=""><br>
+          <p class="info">Password must be at least 8 characters.</p>
+        </div><br><br>
+        <div class="labelitem">Year:</div>
+        <div class="inputitem">
+          <input type="radio" name="grade_year" id="freshman" value="freshman" checked="">
+          <label for="freshman">Freshman</label><br>
+          <input type="radio" name="grade_year" id="sophomore" value="sophomore">
+          <label for="sophomore">Sophomore</label><br>
+          <input type="radio" name="grade_year" id="junior" value="junior">
+          <label for="junior">Junior</label><br>
+          <input type="radio" name="grade_year" id="senior" value="senior">
+          <label for="senior">Senior</label><br>
+        </div><br><br>
+        <div class="labelitem">Devices:</div>
+        <div class="inputitem">
+          <input type="checkbox" name="devices[]" id="laptop" value="laptop">
+          <label for="laptop">Laptop</label><br>
+          <input type="checkbox" name="devices[]" id="desktop" value="desktop">
+          <label for="desktop">Desktop</label><br>
+          <input type="checkbox" name="devices[]" id="tablet" value="tablet">
+          <label for="tablet">Tablet</label><br>
+        </div><br>
+        <label for="date_enrolled" class="labelitem">Date enrolled:</label>
+        <input type="date" name="date_enrolled" id="date_enrolled"><br>
+        <label for="favcolor" class="labelitem">Favorite color:</label>
+        <input type="color" name="favcolor" id="favcolor"><br>
+        <label for="fun_facts" class="labelitem">Fun facts:</label>
+        <textarea name="fun_facts" id="fun_facts" rows="10" cols="20" placeholder="Maybe put in some fun facts if you feel like it..."></textarea><br>
+      </fieldset>
+      <section id="reset_submit">
+        <input type="reset" value="Reset" onclick="reset_form()">
+        <input type="submit" value="Submit">
+      </section><br>
+      <div id="summary_wrapper">
+        <fieldset>
+          <legend>Summary</legend>
+          <section id="summary"></section>
+        </fieldset>
+      </div>
+    </form>
+  <br />
+  <i class="material-icons green">check</i>
+  <i class="material-icons red">close</i>
+  <i class="material-icons green">mood</i>
+  <i class="material-icons red">mood_bad</i>
 </body>
 </html>
 
