146 JS work, 365 hw4 work

--- a/cs146/javascript/imagechanger/imagechanger.html
+++ b/cs146/javascript/imagechanger/imagechanger.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <title>JavaScript Image Changer</title>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <link type="text/css" rel="stylesheet" href="imagechanger.css" />
     <script src="imagechanger.js"></script>
   </head>
