--- a/cs146/javascript/js_play/play.html
+++ b/cs146/javascript/js_play/play.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html lang="en-us">
-    <head>
-        <title>Playing with JavaScript</title>
-        <meta charset="utf-8" />
-        <script src="play.js"></script>
-    </head>
-    <body>
-        <form id="mainform" name="mainform" method="get" onsubmit="return false;">
-            <input type="text" size="24" maxlength="32" id="name" name="name" />
-            <input type="submit" value="Submit" />
-        </form>
-        <script type="text/javascript">
-            var val = prompt("How old are you?", 18);
-            if(!is_numeric(val)){
-                alert("Error: Age must be a number.");
-            } else {
-                alert(who_is_older(parseInt(val)));
-            }
-        </script>
-    </body>
+  <head>
+    <title>Playing with JavaScript</title>
+    <meta charset="utf-8" />
+    <script src="play.js"></script>
+  </head>
+  <body>
+    <form id="mainform" name="mainform" method="get" onsubmit="return false;">
+      <input type="text" size="24" maxlength="32" id="name" name="name" />
+      <input type="submit" value="Submit" />
+    </form>
+    <!--
+    <script type="text/javascript">
+      var val = prompt("How old are you?", 18);
+      if(!is_numeric(val)){
+        alert("Error: Age must be a number.");
+      } else {
+        alert(who_is_older(parseInt(val)));
+      }
+    </script>
+    -->
+    <script type="text/javascript">
+      var list = [3, 4, 1, 5, 2];
+      document.write("Original: " + list + "<br />")
+      selectionSort(list);
+      document.write("Sorted: &nbsp;&nbsp; " + list);
+    </script>
+  </body>
 </html>
